# MUSCOD_models

./: .gitignore
RAMone/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CreateDatStructMonoped1D.m  CreateDatStructRAMoneRun.asv  CreateDatStructRAMoneRun.m  CreateDatStructRAMoneWalk.asv  CreateDatStructRAMoneWalk.m  DartConfiguration.tcl  ExperimentalProtocol.asv  ExperimentalProtocol.m  Makefile  cmake_install.cmake
RAMone/CMake/.svn/: entries
RAMone/CMake/Modules/.svn/: entries
RAMone/DAT/: 1DHopper.dat~  1DHopperNonPer.dat~
RAMone/RES/: 1DHopper.mot  1DHopper.plt  1DHopper.txt  1DHopperNonPer.mot  1DHopperNonPer.plt  1DHopperNonPer.txt  RAMone_Walk_posActWork_BASE_00.mot  RAMone_Walk_posActWork_BASE_00.plt  ToyProblem.mot  ToyProblem.plt  ToyProblem.txt  ToyProblemNonPeriodic.mot  ToyProblemNonPeriodic.txt  ToyProblemNonPeriodic1.plt  ToyProblemNonPeriodic10.plt  ToyProblemNonPeriodic2.plt  ToyProblemNonPeriodic3.plt  ToyProblemNonPeriodic4.plt  ToyProblemNonPeriodic5.plt  ToyProblemNonPeriodic6.plt  ToyProblemNonPeriodic7.plt  ToyProblemNonPeriodic8.plt  ToyProblemNonPeriodic9.plt
RAMone/RES/BaseData/: RAMone_Run_posActWork_BASE_00.mat  RAMone_Run_posElWork_BASE_00.mat  RAMone_Run_totElLoss_BASE_00.mat  RAMone_Walk_posActWork_BASE_00.mat  RAMone_Walk_posElWork_BASE_00.mat  RAMone_Walk_totElLoss_BASE_00.mat
RAMone/SRC/: AB_Constraints.cpp  AB_Constraints.h  AB_Dynamics.cpp  AB_Dynamics.h  AB_Running.cpp  AB_Walking.cpp
RAMone/Yev Code/: PB_Constraints.cpp-  PB_Constraints.h  PB_Constraints.h-  PB_Dynamics.cpp  PB_Dynamics.h  PB_Dynamics.h-  PB_Running.cpp  PB_Walking.cpp
RAMone_Experiments/: CreateDatFile.m  CreateDatStructRAMoneWalk.m  ExperimentalProtocol.m  UpdateDatStruct.m
RAMone_Experiments/BaseData/: RAMone_Run_posActWork_BASE_00.mat  RAMone_Run_posElWork_BASE_00.mat  RAMone_Run_totElLoss_BASE_00.mat  RAMone_Walk_posActWork_BASE_00.mat  RAMone_Walk_posActWork_BASE_00.plt  RAMone_Walk_posElWork_BASE_00.mat  RAMone_Walk_totElLoss_BASE_00.mat  RAMone_Walk_totElLoss_BASE_00.plt
